--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -94,7 +94,7 @@
                 </div>
                 <div style="flex: 80%; align-self: center">
                     <p class="lead">
-                    <span>BiaSwap: Removing Dataset Bias with Bias-Tailored Swapping Augmentation</span><br>
+                    <span style="font-weight: 700;">BiaSwap: Removing Dataset Bias with Bias-Tailored Swapping Augmentation</span><br>
                     <span style="font-size: 14px;">Eungyeup Kim*,<span style="font-weight: 700;">Jihyeon Lee*</span>, Jaegul Choo</span><br>
                     <i style="font-size: 14px;">International Conference on Computer Vision (ICCV), 2021, Accepted</i><br>
                     <a href="https://arxiv.org/abs/2108.10008" target="_blank" rel="noopener noreferrer" style="font-size: 14px">[Paper]</a>
@@ -107,7 +107,7 @@
                 </div>
                 <div style="flex: 80%; align-self: center">
                     <p class="lead">
-                    <span>Learning Debiased Representation via Disentangled Feature Augmentation</span><br>
+                    <span style="font-weight: 700;">Learning Debiased Representation via Disentangled Feature Augmentation</span><br>
                     <span style="font-size: 14px;">Jungsoo Lee*, Eungyeup Kim*, Juyoung Lee, <span style="font-weight: 700;">Jihyeon Lee</span>, Jaegul Choo</span><br>
                     <i style="font-size: 14px;">Conference on Neural Information Processing Systems (NeurIPS), 2021, Accepted as Oral Presentation (< 1% acceptance rate)</i><br>
                     <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
@@ -123,7 +123,7 @@
                 </div>
                 <div style="flex: 80%; align-self: center">
                     <p class="lead">
-                    <span>Dense but Efficient VideoQA for Intricate Compositional Reasoning</span><br>
+                    <span style="font-weight: 700;">Dense but Efficient VideoQA for Intricate Compositional Reasoning</span><br>
                     <span style="font-size: 14px;"><span style="font-weight: 700;">Jihyeon Lee*</span>, Wooyoung Kang*, Eunsol Kim</span><br>
                     <i style="font-size: 14px;">Winter Conference on Applications of Computer Vision (WACV), 2023, Accepted</i><br>
                     <a href="https://arxiv.org/abs/2210.10300" target="_blank" rel="noopener noreferrer" style="font-size: 14px">[Paper]</a>
@@ -137,7 +137,7 @@
                 </div>
                 <div style="flex: 80%; align-self: center">
                     <p class="lead">
-                    <span>PePe: Personalized Post-editing Model utilizing User-generated Post-edits</span><br>
+                    <span style="font-weight: 700;">PePe: Personalized Post-editing Model utilizing User-generated Post-edits</span><br>
                     <span style="font-size: 14px;"><span style="font-weight: 700;">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo</span><br>
                     <i style="font-size: 14px;">Arxiv Preprint</i><br>
                     <a href="https://arxiv.org/abs/2209.10139" target="_blank" rel="noopener noreferrer" style="font-size: 14px">[Paper]</a>
