--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -40,12 +40,12 @@
 
         <div class="executive-summary" itemprop="description">
             <!-- <h2>About Me</h2> -->
-            <div>I am an AI Researcher of <a style="text-decoration:underline; color: #000000;" href="https://www.kakaobrain.com/" target="_blank" rel="noopener noreferrer">Kakaobrain</a>, working in large-scale language model team. I received MS from DAVIAN Lab at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
+            <div>I am an NLP researcher at <a style="text-decoration:underline; color: #000000;" href="https://www.kakaobrain.com/" target="_blank" rel="noopener noreferrer">Kakao Brain</a>. I received MS from DAVIAN Lab at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
                 Before that, I obtained the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at KAIST.
             <br><br>
-            My research aims to improve the large-scale language models. I focus on two main topics; 1) curation of large-scale datasets to effectively pre-train the language models and 2) improve the controllability of the generation to solve the toxicity problem.  
-            Formerly, I worked on projects that aim to solve efficient multimodal QA, learn de-biased representation, and consider the personal style on machine translation.
-            More broadly, my research interests lies in the areas of <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">controllable language generation, robustness and fairness of LM, search-augmented LM, memory-augmented LM, multimodal learning, and various natural language processing topics</code>.</div>
+            My recent efforts center on <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">enhancing the coding and reasoning capabilities of LLMs</code> and <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">employing LLMs as tool agents</code>.
+            In the past, I have contributed to projects addressing large-scale language model training, in-context learning optimization, multimodal question-answering, and unbiased representation learning.
+            I am also interested in the robustness and fairness of language models, knowledge-augmented LMs, and multimodal generative AI.</div>
             <br>                    
             <div>
                 <p>Detailed resume can be found in the following link.</p>
@@ -65,15 +65,17 @@
         </header>
 
         <div>
-            <code style="padding: 2px 4px; font-weight: bold;">Aug 2022&nbsp;</code>&emsp; &#127942; Paper accepted to WACV 2023<br>    
+          <code style="padding: 2px 4px; font-weight: bold;">Jun 2023&nbsp;</code>&emsp; &#128640; Promoted to Project Leader at Kakao Brain<br>
+          <code style="padding: 2px 4px; font-weight: bold;">Jan 2023&nbsp;</code>&emsp; &#127942; Paper accepted to EACL 2023 findings<br>    
+          <code style="padding: 2px 4px; font-weight: bold;">Aug 2022&nbsp;</code>&emsp; &#127942; Paper accepted to WACV 2023<br>    
             <code style="padding: 2px 4px; font-weight: bold;">Feb 2022&nbsp;</code>&emsp; &#127891; Officially a Master in Artificial Intelligence<br>
-            <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; &#128640; Working at Kakaobrain as an AI Research Scientist<br>
+            <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; &#128640; Working at Kakao Brain as an AI Research Scientist<br>
             <code style="padding: 2px 4px; font-weight: bold;">Oct 2021&nbsp;</code>&emsp; &#127942; Paper accepted to NeurIPS 2021 as an Oral presentation<br>
-            <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; &#127942; Paper accepted to ICCV 2021<br>    
-            <code style="padding: 2px 4px; font-weight: bold;">July 2021</code>&emsp; &#128205; Starting my internship at Kakaobrin<br>
+            <code style="padding: 2px 4px; font-weight: bold;">Jul 2021&nbsp</code>&emsp; &#127942; Paper accepted to ICCV 2021<br>    
+            <code style="padding: 2px 4px; font-weight: bold;">Jul 2021&nbsp</code>&emsp; &#128205; Starting my internship at Kakao Brain<br>
             <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; &#128205; Working at Naver Papago as a Collaborative Researcher<br>
             <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; &#127891; Graduated cum laude with a Bachelor in Industrial Engineering & Business Management<br>
-            <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; &#128640; Working at Classum as a Data Analyst/Marketer<br>
+            <code style="padding: 2px 4px; font-weight: bold;">Aug 2020&nbsp;</code>&emsp; &#128640; Working at Classum as a Data Analyst&Marketer<br>
         </div>
       </section>
       <!-- end Education -->
@@ -139,13 +141,25 @@
                     <p class="lead">
                     <span style="font-weight: 700;">PePe: Personalized Post-editing Model utilizing User-generated Post-edits</span><br>
                     <span style="font-size: 14px;"><span style="font-weight: 700;">Jihyeon Lee*</span>, Taehee Kim*, Yunwon Tae*, Chunbok Park, Jaegul Choo</span><br>
-                    <i style="font-size: 14px;">Arxiv Preprint</i><br>
+                    <i style="font-size: 14px;">European Chapter of the Association for Computational Linguistics (EACL), 2023, Accepted</i><br>
                     <a href="https://arxiv.org/abs/2209.10139" target="_blank" rel="noopener noreferrer" style="font-size: 14px">[Paper]</a>
-                    <!-- <a href="https://arxiv.org/abs/1910.02806" class="read-more-button">Robustness</a> -->
                     </p>
                 </div>
             </div>
-        </div>
+            <div style="display: flex">
+              <div style="flex: 20%">
+                  <img src="theme-assets/fid_rag.png" width="100px" alt="" style="margin:10px; margin-top:20px;">
+              </div>
+              <div style="flex: 80%; align-self: center">
+                  <p class="lead">
+                  <span style="font-weight: 700;">Exploiting the Potential of Seq2Seq Models as Robust Few-Shot Learners</span><br>
+                  <span style="font-size: 14px;"><span style="font-weight: 700;">Jihyeon Lee*</span>, Dain Kim*, Doohae Jung*, Boseop Kim, Kyoung-Woon On</span><br>
+                  <i style="font-size: 14px;">ArXiv preprinted</i><br>
+                  <a href="https://arxiv.org/abs/2307.14856" target="_blank" rel="noopener noreferrer" style="font-size: 14px">[Paper]</a>
+                  </p>
+              </div>
+          </div>
+      </div>
         
       </section>
       <!-- end Projects -->
