--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -19,7 +19,7 @@
         <!-- Your name is defined in the _config.yml file -->
         <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
         <h3 class="header-title-email">AI Research Scientist<br>gina.ai at kakaobrain dot com</h3>
-        <p class="header-link"><a href="theme-assets/GinaLee_CV_221215_Updated.pdf" target="_blank" rel="noopener noreferrer"> [Resume] </a><a href="https://scholar.google.com/citations?user=lArnR6gAAAAJ&hl=ko" target="_blank" rel="noopener noreferrer"> [Google Scholar] </a><a href="https://github.com/GinaJihyeonLee" target="_blank" rel="noopener noreferrer"> [Github] </a><a href="https://www.linkedin.com/in/ginajihyeonlee" target="_blank" rel="noopener noreferrer"> [Linkedin] </a></p>        
+        <p class="header-link"><a href="theme-assets/GinaLee_CV_2312_Updated.pdf" target="_blank" rel="noopener noreferrer"> [Resume] </a><a href="https://scholar.google.com/citations?user=lArnR6gAAAAJ&hl=ko" target="_blank" rel="noopener noreferrer"> [Google Scholar] </a><a href="https://github.com/GinaJihyeonLee" target="_blank" rel="noopener noreferrer"> [Github] </a><a href="https://www.linkedin.com/in/ginajihyeonlee" target="_blank" rel="noopener noreferrer"> [Linkedin] </a></p>        
 
         <!-- To display contact info here, change `display_header_contact_info` value in _config.yml to true -->
         {% if site.display_header_contact_info == 'true' %}
@@ -40,16 +40,16 @@
 
         <div class="executive-summary" itemprop="description">
             <!-- <h2>About Me</h2> -->
-            <div>I am an NLP researcher at <a style="text-decoration:underline; color: #000000;" href="https://www.kakaobrain.com/" target="_blank" rel="noopener noreferrer">Kakao Brain</a>. I received MS from DAVIAN Lab at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a> advised by <a style="text-decoration:underline; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
-                Before that, I obtained the Bachelor of Science in Biz&Tech Management and Industrial Engineering in 2020, at KAIST.
+            <div>I am an NLP researcher at <a style="text-decoration:underline; color: #000000;" href="https://www.kakaobrain.com/" target="_blank" rel="noopener noreferrer">Kakao Brain</a>. I received an Master at <a style="text-decoration:underline; color: #000000;" href="https://gsai.kaist.ac.kr/" target="_blank" rel="noopener noreferrer">KAIST Graduate School of Artificial Intelligence</a>, under the advisement of <a style="text-decoration:underline; color: #000000" href="https://sites.google.com/site/jaegulchoo/" target="_blank" rel="noopener noreferrer">Jaegul Choo</a>.
+                Before that, I obtained a Bachelor in Biz&Tech Management and Industrial Engineering at KAIST.
             <br><br>
             My recent efforts center on <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">enhancing the coding and reasoning capabilities of LLMs</code> and <code style="padding: 2px 4px; color: #df2854; background-color: #EFEBEF; border-radius: 4px; font-size: 95%">employing LLMs as tool agents</code>.
-            In the past, I have contributed to projects addressing large-scale language model training, in-context learning optimization, multimodal question-answering, and unbiased representation learning.
+            In the past, I have contributed to projects addressing large-scale foundation model training, in-context learning optimization, fair and robust language generation, multimodal question-answering, and unbiased representation learning.
             I am also interested in the robustness and fairness of language models, knowledge-augmented LMs, and multimodal generative AI.</div>
             <br>                    
             <div>
                 <p>Detailed resume can be found in the following link.</p>
-                <a class="read-more" href="theme-assets/GinaLee_CV_221215_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a>
+                <a class="read-more" href="theme-assets/GinaLee_CV_2312_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a>
             </div>            
         </div>
       </section>
