Update latest news

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -65,6 +65,7 @@
         </header>
 
         <div>
+          <code style="padding: 2px 4px; font-weight: bold;">Sep 2023&nbsp;</code>&emsp; &#127908; Invited talk at Singapore Management University<br>
           <code style="padding: 2px 4px; font-weight: bold;">Jun 2023&nbsp;</code>&emsp; &#128640; Promoted to Project Leader at Kakao Brain<br>
           <code style="padding: 2px 4px; font-weight: bold;">Jan 2023&nbsp;</code>&emsp; &#127942; Paper accepted to EACL 2023 findings<br>    
           <code style="padding: 2px 4px; font-weight: bold;">Aug 2022&nbsp;</code>&emsp; &#127942; Paper accepted to WACV 2023<br>    
