Update about me

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -47,10 +47,10 @@
             In the past, I have contributed to projects addressing large-scale foundation model training, in-context learning optimization, fair and robust language generation, multimodal question-answering, and unbiased representation learning.
             I am also interested in the robustness and fairness of language models, knowledge-augmented LMs, and multimodal generative AI.</div>
             <br>                    
-            <div>
+            <!-- <div>
                 <p>Detailed resume can be found in the following link.</p>
                 <a class="read-more" href="theme-assets/GinaLee_CV_2312_Updated.pdf" target="_blank" rel="noopener noreferrer" title="Case studies">Full resume →</a>
-            </div>            
+            </div>             -->
         </div>
       </section>
       <!-- end Experience -->
